--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -4,3 +4,7 @@ on:
     types: [opened]
 permissions:
   pull-requests: write
+jobs:
+  build:
+    name: Post Welcome comment
+    run-on: ubuntu-lastest
